// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MilestonesList structural/snapshot tests edge cases matches the structural snapshot when a currency-mismatch warning is present 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <span
      class="text-sm text-slate-500"
      id="milestones-count"
    >
      2
       total
    </span>
  </div>
  <div
    aria-label="Milestone status summary"
    class="mt-4 flex flex-wrap gap-2"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        2
      </span>
    </span>
  </div>
  <div
    class="mt-4 rounded-2xl border border-amber-300 bg-amber-50 p-4 text-sm text-amber-950"
    role="alert"
  >
    <p
      class="font-semibold"
    >
      1
       
      milestone uses
       
      EUR
       instead of 
      USD
      .
    </p>
    <ul
      class="mt-2 list-disc space-y-1 pl-5"
    >
      <li>
        Foreign milestone
        : 
        €400.00
      </li>
    </ul>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="mt-6 space-y-4 max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2"
    role="region"
    tabindex="0"
  >
    <article
      class="rounded-3xl border border-slate-200 bg-slate-50 p-4 shadow-sm"
      id="milestone-m1"
    >
      <div
        class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <p
            class="text-sm font-medium text-slate-600"
          >
            Local milestone
          </p>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            Due 
            2025-01-01
          </p>
        </div>
        <span
          aria-label="Status: Pending"
          class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
          role="status"
        >
          <span
            aria-hidden="true"
          >
            ⏳
          </span>
          Pending
        </span>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
        >
          $500.00
        </p>
      </div>
    </article>
    <article
      class="rounded-3xl border border-slate-200 bg-slate-50 p-4 shadow-sm"
      id="milestone-m2"
    >
      <div
        class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <p
            class="text-sm font-medium text-slate-600"
          >
            Foreign milestone
          </p>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            Due 
            2025-01-02
          </p>
        </div>
        <span
          aria-label="Status: Pending"
          class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
          role="status"
        >
          <span
            aria-hidden="true"
          >
            ⏳
          </span>
          Pending
        </span>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
        >
          €400.00
        </p>
      </div>
    </article>
  </div>
</section>
`;

exports[`MilestonesList structural/snapshot tests edge cases matches the structural snapshot when the due-soon reminder banner is present 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <span
      class="text-sm text-slate-500"
      id="milestones-count"
    >
      1
       total
    </span>
  </div>
  <div
    aria-label="Milestone status summary"
    class="mt-4 flex flex-wrap gap-2"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
  </div>
  <div
    class="mt-6 flex items-start gap-3 rounded-3xl border border-amber-200 bg-amber-50/50 p-4 text-amber-900 shadow-sm backdrop-blur-sm dark:border-amber-500/20 dark:bg-amber-500/5 dark:text-amber-200"
    role="status"
  >
    <div
      class="flex-1"
    >
      <p
        class="font-semibold text-sm"
      >
        1
         
        milestone is
         due within 
        7
         days
      </p>
      <ul
        class="mt-1.5 flex flex-wrap gap-x-3 gap-y-1 text-xs text-amber-800 dark:text-amber-300"
      >
        <li
          class="flex items-center gap-1.5"
        >
          <a
            class="font-medium underline hover:text-amber-950 dark:hover:text-white focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500 focus-visible:ring-offset-2 rounded"
            href="#milestone-m1"
          >
            Urgent milestone
          </a>
        </li>
      </ul>
    </div>
    <button
      aria-label="Dismiss reminder"
      class="inline-flex h-6 w-6 shrink-0 items-center justify-center rounded-full text-amber-600 hover:bg-amber-100 hover:text-amber-800 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:ring-offset-1 dark:text-amber-400 dark:hover:bg-amber-500/10 dark:hover:text-amber-200 transition-colors"
      type="button"
    >
      <span
        aria-hidden="true"
        class="text-lg leading-none"
      >
        ×
      </span>
    </button>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="mt-6 space-y-4 max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2"
    role="region"
    tabindex="0"
  >
    <article
      class="rounded-3xl border border-slate-200 bg-slate-50 p-4 shadow-sm"
      id="milestone-m1"
    >
      <div
        class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <p
            class="text-sm font-medium text-slate-600"
          >
            Urgent milestone
          </p>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            Due 
            2026-01-03
          </p>
        </div>
        <span
          aria-label="Status: Pending"
          class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
          role="status"
        >
          <span
            aria-hidden="true"
          >
            ⏳
          </span>
          Pending
        </span>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
        >
          $750.00
        </p>
      </div>
    </article>
  </div>
</section>
`;

exports[`MilestonesList structural/snapshot tests edge cases renders "Due TBD" and matches the snapshot when a milestone has no dueDate 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <span
      class="text-sm text-slate-500"
      id="milestones-count"
    >
      1
       total
    </span>
  </div>
  <div
    aria-label="Milestone status summary"
    class="mt-4 flex flex-wrap gap-2"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="mt-6 space-y-4 max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2"
    role="region"
    tabindex="0"
  >
    <article
      class="rounded-3xl border border-slate-200 bg-slate-50 p-4 shadow-sm"
      id="milestone-m1"
    >
      <div
        class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <p
            class="text-sm font-medium text-slate-600"
          >
            Undated milestone
          </p>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            Due 
            TBD
          </p>
        </div>
        <span
          aria-label="Status: Pending"
          class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
          role="status"
        >
          <span
            aria-hidden="true"
          >
            ⏳
          </span>
          Pending
        </span>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
        >
          $100.00
        </p>
      </div>
    </article>
  </div>
</section>
`;

exports[`MilestonesList structural/snapshot tests empty state matches the structural snapshot for an empty list 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <span
      class="text-sm text-slate-500"
      id="milestones-count"
    >
      0
       total
    </span>
  </div>
  <div
    class="mt-6 space-y-4 max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2"
  />
</section>
`;

exports[`MilestonesList structural/snapshot tests loaded state matches the structural snapshot for a populated list 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <span
      class="text-sm text-slate-500"
      id="milestones-count"
    >
      3
       total
    </span>
  </div>
  <div
    aria-label="Milestone status summary"
    class="mt-4 flex flex-wrap gap-2"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-info-bg)] text-[var(--status-info-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ✓
      </span>
      Completed
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-error-bg)] text-[var(--status-error-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⚠
      </span>
      Disputed
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="mt-6 space-y-4 max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2"
    role="region"
    tabindex="0"
  >
    <article
      class="rounded-3xl border border-slate-200 bg-slate-50 p-4 shadow-sm"
      id="milestone-m1"
    >
      <div
        class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <p
            class="text-sm font-medium text-slate-600"
          >
            Kickoff call
          </p>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            Due 
            2025-01-01
          </p>
        </div>
        <span
          aria-label="Status: Completed"
          class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-info-bg)] text-[var(--status-info-foreground)] "
          role="status"
        >
          <span
            aria-hidden="true"
          >
            ✓
          </span>
          Completed
        </span>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
        >
          $1,200.00
        </p>
      </div>
    </article>
    <article
      class="rounded-3xl border border-slate-200 bg-slate-50 p-4 shadow-sm"
      id="milestone-m2"
    >
      <div
        class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <p
            class="text-sm font-medium text-slate-600"
          >
            Design handoff
          </p>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            Due 
            2025-02-01
          </p>
        </div>
        <span
          aria-label="Status: Pending"
          class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
          role="status"
        >
          <span
            aria-hidden="true"
          >
            ⏳
          </span>
          Pending
        </span>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
        >
          $3,400.00
        </p>
      </div>
    </article>
    <article
      class="rounded-3xl border border-slate-200 bg-slate-50 p-4 shadow-sm"
      id="milestone-m3"
    >
      <div
        class="flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
      >
        <div>
          <p
            class="text-sm font-medium text-slate-600"
          >
            Final delivery
          </p>
          <p
            class="mt-1 text-sm text-slate-500"
          >
            Due 
            2025-03-01
          </p>
        </div>
        <span
          aria-label="Status: Disputed"
          class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-error-bg)] text-[var(--status-error-foreground)] "
          role="status"
        >
          <span
            aria-hidden="true"
          >
            ⚠
          </span>
          Disputed
        </span>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
        >
          $5,000.00
        </p>
      </div>
    </article>
  </div>
</section>
`;
